Primeiras telas do menu

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,7 +23,9 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
 
-
+$menu-ios-background: #000000;
+$menu-md-background: #000000;
+$menu-wp-background: #000000;
 
 // Named Color Variables
 // --------------------------------------------------
