--- a/src/pages/tab-home/tab-home.scss
+++ b/src/pages/tab-home/tab-home.scss
@@ -38,6 +38,7 @@ page-tab-home {
     margin: 5px 0px 0px 0px;
     background: #339966;
     text-transform: none;
+    height: 30px;
   }
 
   .list_options ion-item{
