--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,9 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  grey:       #5b6870,
+  blue:       #1496c5
 );
 
 
